apps/shop/ad/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-ad-dev
spec:
  host: shop-ad.shop-ad.svc.cluster.local
  subsets:
  - name: shop-ad-dev
    labels:
      app: shop-ad
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-ad-dev-d1a
    labels:
      app: shop-ad
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
